--- a/pfd2.html
+++ b/pfd2.html
@@ -735,6 +735,31 @@ $(function () {
 
 <script src="http://img5.uloz.to/pornfile/js2/nodus/dialog.js?v=3.300.103"></script>
 
+
+
+<svg>
+
+<symbol id="iconFullScreen"	viewBox="0 0 438.543 438.543">
+	<path d="M407.42,159.029c3.62,3.616,7.898,5.428,12.847,5.428c2.282,0,4.668-0.476,7.139-1.429 c7.426-3.235,11.136-8.853,11.136-16.846V18.276c0-4.949-1.807-9.231-5.428-12.847c-3.61-3.617-7.898-5.424-12.847-5.424H292.36 c-7.991,0-13.607,3.805-16.848,11.419c-3.23,7.423-1.902,13.99,4,19.698l41.111,41.112L219.271,173.589L117.917,72.231 l41.112-41.112c5.901-5.708,7.232-12.275,3.999-19.698C159.789,3.807,154.175,0,146.182,0H18.276C13.324,0,9.041,1.809,5.425,5.426 c-3.617,3.616-5.424,7.898-5.424,12.847v127.907c0,7.996,3.809,13.61,11.419,16.846c2.285,0.948,4.57,1.429,6.855,1.429 c4.948,0,9.229-1.812,12.847-5.427l41.112-41.109l101.354,101.354L72.234,320.622l-41.112-41.113 c-5.711-5.903-12.275-7.231-19.702-4.001c-7.614,3.241-11.419,8.856-11.419,16.854v127.906c0,4.948,1.807,9.229,5.424,12.847 c3.619,3.614,7.902,5.421,12.851,5.421h127.906c7.996,0,13.61-3.806,16.846-11.416c3.234-7.427,1.903-13.99-3.999-19.705 l-41.112-41.106L219.271,264.95l101.353,101.361l-41.114,41.11c-5.899,5.708-7.228,12.279-3.997,19.698 c3.237,7.617,8.856,11.423,16.851,11.423h127.907c4.948,0,9.232-1.813,12.847-5.428c3.613-3.613,5.42-7.898,5.42-12.847V292.362 c0-7.994-3.709-13.613-11.136-16.851c-7.802-3.23-14.462-1.903-19.985,4.004l-41.106,41.106L264.952,219.271L366.31,117.917 L407.42,159.029z"/>
+</symbol>
+
+<symbol id="iconPlay" viewBox="0 0 10 10">
+	<path d="M1,1 9,5 1,9z" stroke-linejoin="round" stroke-width="1"/>
+</symbol>
+
+<symbol id="iconPause" viewBox="0 0 10 10">
+	<path d="M3,1 3,9 M7,9 7,1" stroke-linejoin="round" stroke-width="3"/>
+</symbol>
+
+<symbol id="iconMute" viewBox="0 6 65 60" stroke-linejoin="round" stroke-width="5">
+	<polygon points="39.389,13.769 22.235,28.606 6,28.606 6,47.699 21.989,47.699 39.389,62.75 39.389,13.769"/>
+	<polygon points="0,0 65,65"/>
+	<polygon points="65,0 0,65"/>
+</symbol>
+
+</svg>
+
+
 </body>
 <!-- Monitoring OK -->
 <!-- http7 -->
@@ -787,7 +812,7 @@ div#inPlayerAd {
 	left: 0;
 	right: 0;
 	padding: 5px;
-	opacity: 1;
+	opacity: 0;
 	-webkit-transition: opacity .3s;
 	-moz-transition: opacity .3s;
 	-o-transition: opacity .3s;
@@ -795,6 +820,12 @@ div#inPlayerAd {
 	transition: opacity .3s;
 	background-color: #2D062A;
 }
+
+/*
+#video-controls input {
+	display: inline-block;
+}
+*/
 
 #video-container:hover #video-controls {
 	opacity: .9;
@@ -804,36 +835,14 @@ div#inPlayerAd {
 	padding-left: 4px;
 }
 button {
-	border: 1px solid cyan;
+	background: rgba(0,0,0,.5);
+	border: 0;
 	color: #EEE;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	-o-border-radius: 3px;
 	border-radius: 3px;
 	margin: 0 1%;
-	width: 20px;
-	height: 20px;
-	background-size: cover;
-}
-
-button#play-pause {
-	background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 10 10" fill="white"><path d="M1,1 9,5 1,9z" stroke-linejoin="round" stroke-width="1"/></svg>') no-repeat;
-}
-
-button#play-pause.paused {
-	background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 10 10" stroke="white"><path d="M3,1 3,9 M7,9 7,1" stroke-linejoin="round" stroke-width="3"/></svg>') no-repeat !important;
-}
-
-button#full-screen {
-	background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 450 450" width="20" height="20" fill="white"><path d="M407.42,159.029c3.62,3.616,7.898,5.428,12.847,5.428c2.282,0,4.668-0.476,7.139-1.429 c7.426-3.235,11.136-8.853,11.136-16.846V18.276c0-4.949-1.807-9.231-5.428-12.847c-3.61-3.617-7.898-5.424-12.847-5.424H292.36 c-7.991,0-13.607,3.805-16.848,11.419c-3.23,7.423-1.902,13.99,4,19.698l41.111,41.112L219.271,173.589L117.917,72.231 l41.112-41.112c5.901-5.708,7.232-12.275,3.999-19.698C159.789,3.807,154.175,0,146.182,0H18.276C13.324,0,9.041,1.809,5.425,5.426 c-3.617,3.616-5.424,7.898-5.424,12.847v127.907c0,7.996,3.809,13.61,11.419,16.846c2.285,0.948,4.57,1.429,6.855,1.429 c4.948,0,9.229-1.812,12.847-5.427l41.112-41.109l101.354,101.354L72.234,320.622l-41.112-41.113 c-5.711-5.903-12.275-7.231-19.702-4.001c-7.614,3.241-11.419,8.856-11.419,16.854v127.906c0,4.948,1.807,9.229,5.424,12.847 c3.619,3.614,7.902,5.421,12.851,5.421h127.906c7.996,0,13.61-3.806,16.846-11.416c3.234-7.427,1.903-13.99-3.999-19.705 l-41.112-41.106L219.271,264.95l101.353,101.361l-41.114,41.11c-5.899,5.708-7.228,12.279-3.997,19.698 c3.237,7.617,8.856,11.423,16.851,11.423h127.907c4.948,0,9.232-1.813,12.847-5.428c3.613-3.613,5.42-7.898,5.42-12.847V292.362 c0-7.994-3.709-13.613-11.136-16.851c-7.802-3.23-14.462-1.903-19.985,4.004l-41.106,41.106L264.952,219.271L366.31,117.917 L407.42,159.029z"/></svg>') no-repeat;
-}
-
-button#mute {
-	background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 6 65 60" stroke-linejoin="round" stroke-width="5" fill="white"><polygon points="39.389,13.769 22.235,28.606 6,28.606 6,47.699 21.989,47.699 39.389,62.75 39.389,13.769"/></svg>') no-repeat;
-}
-
-button#mute.muted {
-	background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 6 65 60" stroke-linejoin="round" stroke-width="5" fill="white" stroke="white"><polygon points="39.389,13.769 22.235,28.606 6,28.606 6,47.699 21.989,47.699 39.389,62.75 39.389,13.769"/><polygon points="0,0 65,65"/><polygon points="65,0 0,65"/></svg>') no-repeat !important;
 }
 
 button:hover {
@@ -893,6 +902,22 @@ input#volume-bar::-ms-track {
     border-radius: 3px;
 }
 
+div#video-container svg {
+	display: inline-block;
+	width: 17px;
+	height: 17px;
+	fill: white;
+	stroke: white;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+div#video-container svg:hover { 
+	fill: cyan;
+	stroke: cyan;
+	cursor: pointer;
+}
 
 </style>
 
@@ -916,7 +941,7 @@ $(document).ready(function () {
 
 	console.log('We are going to try the stream player for URI', vData.streamUri);
 	$('div#fileDownload').append('&nbsp;&nbsp;&nbsp;<a href="#view" id="watch" class="commonBigButton mu7"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Mentor_Eye.svg/120px-Mentor_Eye.svg.png" width="24">&nbsp;Zkouknout video<span></span></a>');
-	$('div#fileVideo').append('<div id="video-container"><video src="[[STREAMDATAURI]]" metadata style="visibility:hidden"></video><div id="inPlayerAd">reklama reklama reklama reklama reklama</div><div class="streamPlayer"><strong>!! Experimenálně přehrát video nyní!!</strong><hr>Za přehrání nejsou odečteny kredity ihned, ale až po nějaké chvíli (konkrétně při průchodu přes 25%, 50%, 75% nebo 95% délky videa)<br>Po odečtu kreditů můžete video sledovat či stahovat už volně, po dalších 24 hodin...<hr>Objevil/a jsi problém? &nbsp; &nbsp; &nbsp; &nbsp;<a style="color:black" href="#">Řekni nám to!</a></div><div id="video-controls"><button type="button" id="play-pause" class=""></button><input type="range" id="seek-bar" value="0"><span id="remaining-time"></span><button type="button" id="mute" class=""></button><input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1"><button type="button" id="full-screen"></button></div></div>'.replace('[[STREAMDATAURI]]', vData.streamUri));
+	$('div#fileVideo').append('<div id="video-container"><video src="[[STREAMDATAURI]]" metadata style="visibility:hidden"></video><div id="inPlayerAd">reklama reklama reklama reklama reklama</div><div class="streamPlayer"><strong>!! Experimenálně přehrát video nyní!!</strong><hr>Za přehrání nejsou odečteny kredity ihned, ale až po nějaké chvíli (konkrétně při průchodu přes 25%, 50%, 75% nebo 95% délky videa)<br>Po odečtu kreditů můžete video sledovat či stahovat už volně, po dalších 24 hodin...<hr>Objevil/a jsi problém? &nbsp; &nbsp; &nbsp; &nbsp;<a style="color:black" href="#">Řekni nám to!</a></div><div id="video-controls"><svg><use id="play-pause" xlink:href="#iconPause"/></use></svg><input type="range" id="seek-bar" value="0"><span id="remaining-time">123</span><svg><use id="mute" xlink:href="#iconMute"/></use></svg><input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1"><svg><use id="full-screen" xlink:href="#iconFullScreen"/></use></svg></div></div>'.replace('[[STREAMDATAURI]]', vData.streamUri));
 	var vid = $('div#video-container video');
 	var video = vid[0];
 	video.volume = 0;
@@ -982,15 +1007,13 @@ $(document).ready(function () {
 			video.play();
 
 			// Update the button text to 'Pause'
-			//playButton.innerHTML = "Zastavit";
-			playButton.classList.remove("paused");
+			playButton.innerHTML = "Zastavit";
 		} else {
 			// Pause the video
 			video.pause();
 
 			// Update the button text to 'Play'
-			//playButton.innerHTML = "Přehrát";
-			playButton.classList.add("paused");
+			playButton.innerHTML = "Přehrát";
 		}
 	});
 
@@ -1002,15 +1025,13 @@ $(document).ready(function () {
 			video.muted = true;
 
 			// Update the button text
-			//muteButton.innerHTML = "Ozvučit";
-			muteButton.classList.remove("muted");
+			muteButton.innerHTML = "Ozvučit";
 		} else {
 			// Unmute the video
 			video.muted = false;
 
 			// Update the button text
-			//muteButton.innerHTML = "Ztišit";
-			muteButton.classList.add("muted");
+			muteButton.innerHTML = "Ztišit";
 		}
 	});
 
