Expendable FAQ, minor search banner tweaks and some PF player changes

--- a/hledej.html
+++ b/hledej.html
@@ -241,7 +241,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<style type="text/css">
 	div#serviceRedirDialog fieldset {
 		margin-left: 16px;
-		margin-top: 5px;
+		margin-top: 3px;
 		border-radius: 5px;
 		border: 1px solid #E6E6E6;
 		background: url(grls.png) no-repeat;
@@ -263,11 +263,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		margin-right: 4px;
 		font-weight: 600;
 		color: #777;
-		font-style: italic;
-		background-color: #FFF3FC;
+		background-color: #FFFAFE;
 		padding-left: .8%;
-		box-shadow: 1px 2px 3px rgba(0,0,0,0.5);
-		border: none;
+		/*box-shadow: 1px 2px 3px rgba(0,0,0,0.5);*/
+		border: 1px solid #D9D9D9;
 	}
 	div#serviceRedirDialog form input.button {
 		display: inline-block;
@@ -310,13 +309,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</style>
 
 	<div id="serviceRedirDialog">
-	<fieldset>
-		<legend>Hledáš erotiku nebo obsah pro dospělé?</legend>
-			<form action="http://pornfile.cz/hledej?q=porn" method="get">
-				<input class="pfsearch" value="desny porno vyraz" readonly type="text">
-				<input class="button" value="Vyhledej na PORNfile" id="search-submit" type="submit">
-			</form>
-	</fieldset>
+		<fieldset>
+			<legend>Hledáš erotiku nebo obsah pro dospělé?</legend>
+				<form action="http://pornfile.cz/hledej?q=porn" method="get">
+					<input class="pfsearch" value="desny porno vyraz" readonly type="text">
+					<input class="button" value="Vyhledej na PORNfile" id="search-submit" type="submit">
+				</form>
+		</fieldset>
 	</div>
 
 	
